# STMAE_Project_2023

./: .gitignore  CMakeLists.txt  README.md
src/: Armonizer.cpp  Armonizer.h  CustomOscillator.cpp  CustomOscillator.h  MarkovChain.cpp  MarkovChain.h  MarkovExperiments.cpp  MarkovManager.cpp  MarkovManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SineOscillator.cpp  SineOscillator.h  SynthHandler.cpp  SynthHandler.h  output.mid
